--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-number-format": "^4.5.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^6.7.0"
   }
 }
